CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT( Core )

# OpenCV
FIND_PACKAGE( OpenCV REQUIRED )
IF ( OpenCV_FOUND )
  INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )
ENDIF()

# Boost
FIND_PATH( BOOST_ROOT boost/signals2/signal.hpp
  /usr/local/include )
# SET( Boost_USE_STATIC_LIBS ON)
FIND_PACKAGE( Boost REQUIRED COMPONENTS system filesystem thread )
IF ( Boost_FOUND )
  INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
  LINK_DIRECTORIES( ${Boost_LIBRARY_DIR} )
ENDIF()

# TARGET
FIND_PATH( ACTOR_INCLUDE_DIRS REQUIRED actor.hpp
  /usr/local/include )
INCLUDE_DIRECTORIES( ${ACTOR_INCLUDE_DIRS} )

ADD_DEFINITIONS( -DSTEREOCAPTUREACTOR_EXPORTS )

FILE( GLOB SRCS "*.cpp" )
ADD_LIBRARY( StereoCalibToolCore SHARED ${SRCS} )
TARGET_LINK_LIBRARIES( StereoCalibToolCore ${OpenCV_LIBS} )