CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)

PROJECT( GUI )


# For CMake
set(CMAKE_INCLUDE_CURRENT_DIR ON)


# OpenCV
FIND_PACKAGE( OpenCV REQUIRED )
IF ( OpenCV_FOUND )
  INCLUDE_DIRECTORIES( ${OpenCV_INCLUDE_DIRS} )
ENDIF()


# Boost
FIND_PATH( BOOST_ROOT boost/spirit.hpp
  /usr/local/include )
FIND_PACKAGE( Boost REQUIRED )
IF ( Boost_FOUND )
  INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )
ENDIF()


# Qt
FIND_PACKAGE( Qt5Widgets REQUIRED )
INCLUDE_DIRECTORIES( ${Qt5Widgets_INCLUDE_DIRS} )

FILE( GLOB SRCS "*.cpp" )
FILE( GLOB QTUI_HEADERS "*.h" )
FILE( GLOB QTUI_SRCS "*.ui" )
FILE( GLOB QTUI_RESOURCES "*.qrc" )

QT5_WRAP_UI( QTUI_H_SRCS ${QTUI_SRCS} )
QT5_WRAP_CPP( QTUI_HEADERS_MOC ${QTUI_HEADERS}) 
QT5_ADD_RESOURCES( QTUI_RESOURCES_RCC ${QTUI_RESOURCES} )

# Target
ADD_EXECUTABLE( StereoCalibToolGUI ${SRCS} ${QTUI_H_SRCS} ${QTUI_HEADERS_MOC} ${QTUI_RESOURCES_RCC} )
TARGET_LINK_LIBRARIES( StereoCalibToolGUI ${Qt5Widgets_LIBRARIES} )
TARGET_LINK_LIBRARIES( StereoCalibToolGUI ${OpenCV_LIBS} ) 